# local-kb-index

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
kbindex/: chunkers.py  cli.py  config.py  db.py  doctor.py  embedding.py  errors.py  evaluate.py  ignore.py  indexer.py  lock.py  logging_utils.py  scan.py  search.py  security.py  server.py  status.py  treesitter_support.py  vector_store.py  watch.py
scripts/: install-cli.sh  install-personal-skill.sh  install-project-skill.sh  smoke-test.sh  uninstall-personal-skill.sh  uninstall-project-skill.sh  verify-macos.sh
skills/local-kb-search/: SKILL.md
skills/local-kb-search/scripts/: common.sh  kb-doctor.sh  kb-index.sh  kb-init.sh  kb-rebuild.sh  kb-search-files.sh  kb-search.sh  kb-status.sh  kb-sync.sh
tests/: test_chunkers.py
